fix scroll ev handling in Slide, where it determines if slide is in view; add slideInView handling in Slot and slotContainer; add another essential component - RootSlot, which fixates active slide and provides semantic wrap for slideIds; use RootSlot and render active slide with additional class in Slider in demo. Everything appears to be work king

--- a/demo/src/demo-index.scss
+++ b/demo/src/demo-index.scss
@@ -2,6 +2,7 @@ body {
 }
 
 $generic_color: rgba(0, 0, 0, 0.1);
+$generic_color_denser: rgba(0, 0, 0, 0.3);
 
 .card-section,
 .card-block,
@@ -52,4 +53,8 @@ $generic_color: rgba(0, 0, 0, 0.1);
   height: 24px;
   margin: 4px;
   background-color: $generic_color;
+}
+
+.slider-item.active {
+  background-color: $generic_color_denser;
 }
